--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -158,7 +158,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Enable"
-                android:checked="true" />
+                android:checked="false" />
         </LinearLayout>
     </ScrollView>
 
