--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -13,17 +13,28 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:gravity="center"
-        android:paddingBottom="16dp"
+        android:paddingBottom="8dp"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/warning_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="*To access this menu, press the Back button on the frontpage."
+        android:textSize="12sp"
+        android:textStyle="italic"
+        android:textColor="#FF5722"
+        app:layout_constraintTop_toBottomOf="@id/title_config" />
 
     <ScrollView
         android:id="@+id/scroll_view_config"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/title_config"
+        app:layout_constraintTop_toBottomOf="@id/warning_text"
         app:layout_constraintBottom_toTopOf="@id/button_reset"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp">
 
         <LinearLayout
@@ -50,31 +61,47 @@
                 android:background="#B0B0B0"
                 android:layout_marginTop="16dp" />
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Volume Up"
-                android:textSize="16sp"
-                android:paddingTop="16dp" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingTop="16dp">
 
-            <Spinner
-                android:id="@+id/spinner_volume_up"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:entries="@array/key_options" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Volume Up"
+                    android:textSize="16sp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Volume Down"
-                android:textSize="16sp"
-                android:paddingTop="16dp" />
+                <Spinner
+                    android:id="@+id/spinner_volume_up"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/key_options" />
+            </LinearLayout>
 
-            <Spinner
-                android:id="@+id/spinner_volume_down"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:entries="@array/key_options" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingTop="16dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Volume Down"
+                    android:textSize="16sp" />
+
+                <Spinner
+                    android:id="@+id/spinner_volume_down"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/key_options" />
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -82,31 +109,47 @@
                 android:background="#B0B0B0"
                 android:layout_marginTop="16dp" />
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Swipe Left"
-                android:textSize="16sp"
-                android:paddingTop="16dp" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingTop="16dp">
 
-            <Spinner
-                android:id="@+id/spinner_swipe_left"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:entries="@array/key_options" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Swipe Left"
+                    android:textSize="16sp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Swipe Right"
-                android:textSize="16sp"
-                android:paddingTop="16dp" />
+                <Spinner
+                    android:id="@+id/spinner_swipe_left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/key_options" />
+            </LinearLayout>
 
-            <Spinner
-                android:id="@+id/spinner_swipe_right"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:entries="@array/key_options" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingTop="16dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Swipe Right"
+                    android:textSize="16sp" />
+
+                <Spinner
+                    android:id="@+id/spinner_swipe_right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/key_options" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -146,19 +189,26 @@
                 android:background="#B0B0B0"
                 android:layout_marginTop="16dp" />
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Fullscreen/Immersive Mode"
-                android:textSize="16sp"
-                android:paddingTop="16dp" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingTop="16dp">
 
-            <com.google.android.material.switchmaterial.SwitchMaterial
-                android:id="@+id/switch_fullscreen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Enable"
-                android:checked="false" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Fullscreen/Immersive Mode"
+                    android:textSize="16sp" />
+
+                <com.google.android.material.switchmaterial.SwitchMaterial
+                    android:id="@+id/switch_fullscreen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
