--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -208,7 +208,7 @@
                     android:id="@+id/switch_fullscreen"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="false" />
+                    android:checked="true" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
