--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -30,6 +30,7 @@
         android:id="@+id/scroll_view_config"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="#00FFFFFF"
         app:layout_constraintTop_toBottomOf="@id/warning_text"
         app:layout_constraintBottom_toTopOf="@id/button_reset"
         app:layout_constraintLeft_toLeftOf="parent"
