--- a/app/src/main/res/layout-land/activity_config.xml
+++ b/app/src/main/res/layout-land/activity_config.xml
@@ -23,7 +23,7 @@
         android:id="@+id/warning_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="*To access this menu, press the Back button on the frontpage."
+        android:text="*To access, press the Back button on the frontpage."
         android:textSize="12sp"
         android:textStyle="italic"
         android:textColor="#FF5722"
@@ -372,6 +372,27 @@
 
                     <com.google.android.material.switchmaterial.SwitchMaterial
                         android:id="@+id/switch_hide_navigation_bar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="false" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:paddingTop="16dp">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Disable Text Selection"
+                        android:textSize="16sp" />
+
+                    <com.google.android.material.switchmaterial.SwitchMaterial
+                        android:id="@+id/switch_disable_text_selection"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checked="true" />
